--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>curso git</title>
-	<link rel="stylesheet" type="text/css" href="css/estilos.css">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>curso git</title>
+    <link rel="stylesheet" type="text/css" href="css/estilos.css" />
 
-
-	<h1>Curso GIT </h1>
-	<p>Prueba de un pull</p>
-	<p>Prueba de un pull2</p>
-</head>
-<body>
-
-</body>
+    <h1>Curso GIT</h1>
+    <p>Prueba de un pull</p>
+    <p>Prueba de un pull2</p>
+    <p>Prueba de un pull3</p>
+  </head>
+  <body></body>
 </html>
