se modifico el color a rojo y se añadieron parrafos 4

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <p>Prueba de un pull</p>
     <p>Prueba de un pull2</p>
     <p>Prueba de un pull3</p>
+    <p>Prueba de un pull4</p>
+    <p>Prueba de un pull4</p>
+    <p>Prueba de un pull4</p>
   </head>
   <body></body>
 </html>
