--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   <body>
     <h1>curso git</h1>
 
-    <p>este es el parrafo 1</p>
+    <p>este es el parrafo 1 EN MASTER</p>
   </body>
 </html>
