en diseñador 1 se mantienen los estilos y los scrips se han agregad pparrafos

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <body>
     <h1>curso git</h1>
 
+    <p>este es el parrafo 2 en diseñador1</p>
+
     <p>este es el parrafo diseñador 1</p>
+
+    <p>este es el parrago 3 en diseñador 3</p>
   </body>
 </html>
