modificando parrafo en diseñador 2

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <body>
     <h1>curso git</h1>
 
+    <p>parrafo introducido en diseñador dos!</p>
+
     <p>este es el parrafo 2 en diseñador1</p>
 
     <p>este es el parrafo diseñador 1</p>
