modificacion de parrafo desde master en parraro 1

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <h1>curso git</h1>
 
-    <p>este es el parrafo 2 en diseñador1</p>
+    <p>este es el parrafo y veremos si somos capaces de hacer un merge</p>
 
     <p>este es el parrafo diseñador 1</p>
 
